add searcher resource
